# strydcmd

./: .env.example  .gitignore  README.fr.md  README.md  pyproject.toml
strydcmd/: __init__.py  database.py  main.py  stryd_api.py  sync.py
